<resources>
    <string name="app_name">Career Showcase</string>
    <string name="title_overview">Overview</string>
    <string name="title_education">EducationEntity</string>
    <string name="title_work">Work</string>
    <string name="title_skills">Skills</string>
    <string name="title_contact">Contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageView_profile_picture_description">Profile picture in overview fragment</string>
    <string name="profile_name">profile name</string>
    <string name="profile_headline">profile headline</string>
    <string name="text_introduction">I have a B.Sc. in Electrical and Computer Engineering and studied for a M.Sc. in Nanotechnology. Worked in the software industry for 2 years, in Quality Assurance and Mobile App Development. My primary fields of expertise is Java development for Android applications and building mobile back-ends using Firebase and Google Cloud Platform. My goal is to work on building quality Android applications with reliable back-end services, and to become a world-class expert in this specialty. I combine my educational background and technical skills with a broad knowledge of various technologies to come up with highly efficient and cost-effective solutions. Through motivation and high work ethic, I create and thrive in an environment of collaboration and eagerness to achieve set goals.</string>
    <string name="education_duration">Education Duration</string>
    <string name="education_location">Education Location</string>
    <string name="education_institution">Education Institution</string>
    <string name="education_title">Education Title</string>
    <string name="education_description">Education Description</string>
    <string name="image_view_description_work_logo">Work logo</string>
    <string name="skill_logo">Skill logo</string>
    <string name="intro">I have a B.Sc. in Electrical and Computer Engineering and studied for a M.Sc. in Nanotechnology. Worked in the software industry for 2 years, in Quality Assurance and Mobile App Development. My primary fields of expertise is Java development for Android applications and building mobile back-ends using Firebase and Google Cloud Platform. My goal is to work on building quality Android applications with reliable back-end services, and to become a world-class expert in this specialty. I combine my educational background and technical skills with a broad knowledge of various technologies to come up with highly efficient and cost-effective solutions.
        \n Through motivation and high work ethic, I create and thrive in an environment of collaboration and eagerness to achieve set goals.
        \n I have a B.Sc. in Electrical and Computer Engineering and studied for a M.Sc. in Nanotechnology. Worked in the software industry for 2 years, in Quality Assurance and Mobile App Development. My primary fields of expertise is Java development for Android applications and building mobile back-ends using Firebase and Google Cloud Platform. My goal is to work on building quality Android applications with reliable back-end services, and to become a world-class expert in this specialty. I combine my educational background and technical skills with a broad knowledge of various technologies to come up with highly efficient and cost-effective solutions. Through motivation and high work ethic, I create and thrive in an environment of collaboration and eagerness to achieve set goals.
        \n I have a B.Sc. in Electrical and Computer Engineering and studied for a M.Sc. in Nanotechnology. Worked in the software industry for 2 years, in Quality Assurance and Mobile App Development. My primary fields of expertise is Java development for Android applications and building mobile back-ends using Firebase and Google Cloud Platform. My goal is to work on building quality Android applications with reliable back-end services, and to become a world-class expert in this specialty. I combine my educational background and technical skills with a broad knowledge of various technologies to come up with highly efficient and cost-effective solutions. Through motivation and high work ethic, I create and thrive in an environment of collaboration and eagerness to achieve set goals.</string>
    <string name="image_view_description_contact_logo">Contact logo</string>
    <string name="profile_picture_url"><![CDATA[https://firebasestorage.googleapis.com/v0/b/careershowcase-96976.appspot.com/o/images%2FAhmed_AlAskalany.png?alt=media&token=58b43505-cfad-4004-8052-f1bef076217c]]></string>
</resources>
