<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_overview" />

    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_education" />

    <item
        android:id="@+id/navigation_work"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_work" />

    <item
        android:id="@+id/navigation_skills"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_skills" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_contact" />

</menu>
