<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Ahmed AlAskalany
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/ic_education_learn_literatu"
        android:title="@string/title_overview" />

    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/ic_education_graduation_lea"
        android:title="@string/title_education" />

    <item
        android:id="@+id/navigation_work"
        android:icon="@drawable/ic_building_education_learn"
        android:title="@string/title_work" />

    <item
        android:id="@+id/navigation_skills"
        android:icon="@drawable/ic_education_learn_school_s"
        android:title="@string/title_skills" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_education_learn_pencil_s"
        android:title="@string/title_contact" />

</menu>
